--- a/package.json
+++ b/package.json
@@ -11,41 +11,44 @@
     "prettier:fix": "prettier --write ."
   },
   "dependencies": {
-    "@hookform/resolvers": "^5.0.1",
+    "@apollo/server": "^4.12.2",
+    "@as-integrations/next": "^3.2.0",
+    "@hookform/resolvers": "^5.1.1",
     "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "dotenv": "^16.5.0",
-    "jsonwebtoken": "^9.0.2",
+    "graphql": "^16.11.0",
+    "graphql-tag": "^2.12.6",
+    "jose": "^6.0.11",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "pg": "^8.16.0",
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "react-hook-form": "^7.56.4",
-    "sonner": "^2.0.3",
-    "tailwind-merge": "^3.3.0",
+    "react": "^19.1.0",
+    "react-dom": "^19.1.0",
+    "react-hook-form": "^7.57.0",
+    "sonner": "^2.0.5",
+    "tailwind-merge": "^3.3.1",
     "uuid": "^11.1.0",
-    "zod": "^3.25.36"
+    "zod": "^3.25.63"
   },
   "devDependencies": {
-    "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@eslint/eslintrc": "^3.3.1",
+    "@tailwindcss/postcss": "^4.1.10",
+    "@types/axios": "^0.14.4",
     "@types/bcrypt": "^5.0.2",
-    "@types/jsonwebtoken": "^9.0.9",
     "@types/lodash.debounce": "^4.0.9",
-    "@types/node": "^20",
-    "@types/pg": "^8.15.2",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "eslint": "^9",
+    "@types/node": "^20.19.0",
+    "@types/pg": "^8.15.4",
+    "@types/react": "^19.1.8",
+    "@types/react-dom": "^19.1.6",
+    "eslint": "^9.28.0",
     "eslint-config-next": "15.3.2",
     "prettier": "^3.5.3",
-    "tailwindcss": "^4",
-    "tw-animate-css": "^1.3.1",
-    "typescript": "^5"
+    "tailwindcss": "^4.1.10",
+    "tw-animate-css": "^1.3.4",
+    "typescript": "^5.8.3"
   }
 }
