feat: integrate drizzle-orm for PostgreSQL database management
- Added drizzle-orm and postgres dependencies to package.json.
- Created .env.example for database connection configuration.
- Set up drizzle.config.ts for migration and schema management.
- Implemented database connection and schema definitions in src/lib/db/index.ts.
- Defined email verification and user schemas in respective files.
- Added migration script to handle database migrations.

--- a/.gitignore
+++ b/.gitignore
@@ -31,7 +31,11 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env.local
+.env.development
+.env.test
+.env.production
+.env
 
 # vercel
 .vercel
@@ -40,3 +44,6 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 access.log
+
+# db migration files
+/src/lib/db/migrations
