--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "drizzle-orm": "^0.44.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "jose": "^6.0.11",
@@ -25,6 +26,7 @@
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "pg": "^8.16.1",
+    "postgres": "^3.4.7",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.58.1",
@@ -43,6 +45,8 @@
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "dotenv": "^16.5.0",
+    "drizzle-kit": "^0.31.1",
     "eslint": "^9.29.0",
     "eslint-config-next": "15.3.2",
     "prettier": "^3.5.3",
