--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
@@ -25,6 +26,7 @@
     "lucide-react": "^0.511.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
+    "nodemailer": "^7.0.3",
     "pg": "^8.16.1",
     "postgres": "^3.4.7",
     "react": "^19.1.0",
@@ -42,6 +44,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20.19.1",
+    "@types/nodemailer": "^6.4.17",
     "@types/pg": "^8.15.4",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
