--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,11 +1,11 @@
-version: '3.8'
+version: "3.8"
 
 services:
   nginx:
     image: nginx:alpine
     ports:
-      - '80:80'
-      - '443:443'
+      - "80:80"
+      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
     depends_on:
@@ -17,7 +17,7 @@ services:
   nextjs:
     build: .
     expose:
-      - '3000'
+      - "3000"
     volumes:
       - .:/app
       - /app/node_modules
