--- a/package.json
+++ b/package.json
@@ -14,6 +14,12 @@
     "@apollo/server": "^4.12.2",
     "@as-integrations/next": "^3.2.0",
     "@hookform/resolvers": "^5.1.1",
+    "@radix-ui/react-slot": "^1.2.3",
+    "@tiptap/extension-image": "^2.22.3",
+    "@tiptap/extension-link": "^2.22.3",
+    "@tiptap/extension-underline": "^2.22.3",
+    "@tiptap/react": "^2.22.3",
+    "@tiptap/starter-kit": "^2.22.3",
     "axios": "^1.10.0",
     "bcrypt": "^6.0.0",
     "class-variance-authority": "^0.7.1",
