--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "graphql-tag": "^2.12.6",
     "jose": "^6.0.11",
     "lucide-react": "^0.511.0",
+    "mongoose": "^8.16.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
