--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@as-integrations/next": "^3.2.0",
     "@hookform/resolvers": "^5.1.1",
     "@radix-ui/react-slot": "^1.2.3",
+    "@radix-ui/react-tabs": "^1.1.12",
     "@tiptap/extension-image": "^2.22.3",
     "@tiptap/extension-link": "^2.22.3",
     "@tiptap/extension-underline": "^2.22.3",
