feat: integrate Web3 wallet connection and Irys file upload functionality in UploadPage

--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@apollo/server": "^4.12.2",
     "@as-integrations/next": "^3.2.0",
     "@hookform/resolvers": "^5.1.1",
+    "@irys/web-upload": "^0.0.15",
+    "@irys/web-upload-ethereum": "^0.0.16",
     "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-tabs": "^1.1.12",
     "@tiptap/extension-image": "^2.22.3",
@@ -27,6 +29,7 @@
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
     "drizzle-orm": "^0.44.2",
+    "ethers": "5",
     "graphql": "^16.11.0",
     "graphql-tag": "^2.12.6",
     "jose": "^6.0.11",
