--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "jose": "^6.0.11",
     "lucide-react": "^0.525.0",
     "mongoose": "^8.16.0",
+    "nanoid": "^5.1.5",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
     "nodemailer": "^7.0.3",
