feat: Enhance health check endpoint with detailed status response

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
 NEXT_DATABASE_URL=
 NEXT_SESSION_SECRET=
+NEXT_EMAIL_USER=
+NEXT_EMAIL_PASS=
+NEXT_MONGOOSE_URL=
+GEMINI_API_KEY=
+SERPAPI_API_KEY=
+NEXT_PUBLIC_BASE_URL=
+Wallet_shit=
