--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,12 +5,12 @@ services:
     image: nginx:alpine
     ports:
       - "80:80"
-      - "443:443"
     volumes:
       - ./nginx/default.conf:/etc/nginx/conf.d/default.conf
+      - ./access.log:/var/log/nginx/access.log
     depends_on:
       - nextjs
-    restart: always
+    restart: unless-stopped
     networks:
       - app-network
 
@@ -18,14 +18,18 @@ services:
     build: .
     expose:
       - "3000"
-    volumes:
-      - .:/app
-      - /app/node_modules
+    env_file:
+      - .env
     environment:
       - NODE_ENV=production
-    restart: always
+    restart: unless-stopped
     networks:
       - app-network
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:3000/health"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
 
 networks:
   app-network:
